Fix alignment

--- a/docs/src/components/TopGamesOnDusk/styles.module.scss
+++ b/docs/src/components/TopGamesOnDusk/styles.module.scss
@@ -309,6 +309,7 @@
     }
 
     > li > img {
+      display: block;
       width: 33px;
       height: 33px;
     }
